--- a/.github/workflows/Backend-Test.yml
+++ b/.github/workflows/Backend-Test.yml
@@ -23,6 +23,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
+        working-directory: server
         run: |
           python -m venv venv
           source venv/bin/activate
@@ -30,12 +31,14 @@ jobs:
           pip install -r requirements.txt
 
       - name: Lint with flake8
+        working-directory: server
         run: |
           source venv/bin/activate
           pip install flake8
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: Run FastAPI app (basic test)
+        working-directory: server
         run: |
           source venv/bin/activate
           uvicorn app:app --host 127.0.0.1 --port 8000 &
