--- a/.github/workflows/Backend-Test.yml
+++ b/.github/workflows/Backend-Test.yml
@@ -3,15 +3,16 @@ name: FastAPI CI
 on:
   push:
     paths:
-      - 'server/app.py'
+      - 'server/**/*.py'
+      - '.github/workflows/**'
+  pull_request:
+    paths:
+      - 'server/**/*.py'
       - '.github/workflows/**'
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: server
 
     steps:
       - name: Checkout code
