--- a/.github/workflows/Backend-Test.yml
+++ b/.github/workflows/Backend-Test.yml
@@ -35,9 +35,7 @@ jobs:
       - name: Lint with flake8
         working-directory: server
         run: |
-          source venv/bin/activate
-          pip install flake8
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 .
 
       - name: Run FastAPI app (basic test)
         working-directory: server
