--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emoji-mart/react": "^1.1.1",
+    "@monaco-editor/react": "^4.7.0",
     "emoji-mart": "^5.6.0",
     "next": "15.3.2",
     "react": "^19.0.0",
